crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__participants_0.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result
---
entries:
  - words:
      - SIL
      - Silence
      - LENA
  - words:
      - MAN
      - Male_Adult_Near
      - Male
  - words:
      - MAF
      - Male_Adult_Far
      - Male
  - words:
      - FAN
      - Female_Adult_Near
      - Female
  - words:
      - FAF
      - Female_Adult_Far
      - Female
  - words:
      - CHN
      - Key_Child_Clear
      - Target_Child
  - words:
      - CHF
      - Key_Child_Unclear
      - Target_Child
  - words:
      - CXN
      - Other_Child_Near
      - Child
  - words:
      - CXF
      - Other_Child_Far
      - Child
  - words:
      - NON
      - Noise_Near
      - LENA
  - words:
      - NOF
      - Noise_Far
      - LENA
  - words:
      - OLN
      - Overlap_Near
      - LENA
  - words:
      - OLF
      - Overlap_Far
      - LENA
  - words:
      - TVN
      - Electronic_Sound_Near
      - Media
  - words:
      - TVF
      - Electronic_Sound_Far
      - Media
