crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__pho_parsed_2.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: tier
---
items:
  - Word:
      segments:
        - ˈɑpow
terminator: ~
